add example html-index-file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
-<h1>Meine tolle  Webseite </h1>
+<html>
+    <head>
+        <title> Webproject</title>
+    </head>
+    <body>
+        <h1>Meine tolle  Webseite </h1>
 
-</p> Meine erste Webseite aus dem Informatikunterricht </p>
+        <p> Meine erste tolle Webseite aus dem Informatikunterricht
+            KATZEN: </p>
+        <div>
+            <ul> 
+                <li>Katzen sind toll</li>
+                <li>Katzen sind toller</li>
+                <li>Katzen sind am tollsten</li>
+            </ul>
+        </div>
+        <div> 
+            <a href = "https://kanti-glarus.ch>Link<DIE WEBSITE VOM BESTEN kANTOTN>
+        </div>
+
+        <div>
+            </div> &auml; Box1</div>
+            <br>
+             <div>Box2</div>
+        </div>
+        <div>
+            <img src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y2F0c3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" width="300px" alt="Sehr süsses Kätzchen" /> 
+        </div>
+    </body>
+</html>
