add javascript to our project

--- a/Dreisatz/index copy 2.html
+++ b/Dreisatz/index copy 2.html
@@ -30,7 +30,7 @@
                         <form action="" method="get" class="form-example">
                             <div>
                                 <label for="zahl 1">Zahl 1: </label>
-                                <input id="number" type="zahl1" value="42" class="form-control form-control-lg">
+                                <input type="number" id ="zahl1" value="42" class="form-control form-control-lg">
                             </div>
                         </form>
                     </div> 
@@ -61,7 +61,7 @@
                 </div>
                 
             <div>
-              <input class="btn btn-primary" type="submit" value="Berechnen">
+              <input class="btn btn-primary" id ="calculate" type="submit" value="Berechnen">
               <input class="btn btn-warning" type="reset" value="Zurücksetzen">
             </div>
           </form>
@@ -70,19 +70,25 @@
 
 
         <div class="wrapper">
-            <div class="card">
+            <div class="titlebox">
                 <div class="background-image" style= "background-image: url(https://images.unsplash.com/photo-1585910165842-6bcd6ee68f6e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3Vuc2V0c3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)"></div>
-                    <h2>SUNSETS</h2>
+                <div class = point></div>
+                <h2>sunsets</h2>
             </div>
 
-            <div class="card">
+            <div class="titlebox">
                 <div class="background-image" style= "background-image: url(https://images.unsplash.com/photo-1514575464533-dbc388a5e7f7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8c3Vuc2V0c3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)"></div>
-                <h2>ARE</h2>
+                <h2>are</h2>
             </div>
 
-            <div class="card">
+            <div class="titlebox">
                 <div class="background-image" style= "background-image: url(https://images.unsplash.com/photo-1526420420164-b4ae06c5f886?ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8c3Vuc2V0c3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)"></div>
-                <h2>THE BEST!</h2>
+                <h2>amazing!</h2>
+
             </div>
+
         </div>
+    <script src= "js/script.js"></script>
+
+        
     </body>
